--- a/src/app/components/cotuzacion/table-cotizacion/table-cotizacion.component.html
+++ b/src/app/components/cotuzacion/table-cotizacion/table-cotizacion.component.html
@@ -51,7 +51,7 @@
       />
     </td>
     <td mat-footer-cell *matFooterCellDef class="center">
-      <button class="cotizacion cell_hidde" (click)="pagar(true)" mat-mini-fab color="accent" [matTooltip]="'COTIZACION' | translate">
+      <button class="cotizacion only_cell" (click)="pagar(true)" mat-mini-fab color="accent" [matTooltip]="'COTIZACION' | translate">
         <mat-icon>note</mat-icon>
       </button>
     </td>
