--- a/src/app/components/pagos/detalle-abono/detalle-abono.component.html
+++ b/src/app/components/pagos/detalle-abono/detalle-abono.component.html
@@ -4,12 +4,13 @@
         <mat-dialog-content>
             <mat-form-field appearance="outline">
                 <mat-label>{{ 'DEUDA_ACT' | translate }}</mat-label>
-                <input class="right" matInput readonly value="{{ venta.deuda }}" />
+                <input class="right" matInput readonly value="{{ venta.deuda | number: '0.2-2'}}" />
                 <span matPrefix>$&nbsp;</span>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>{{ 'FALTANTE' | translate }}</mat-label>
-                <input class="right" *ngIf="resto.value > 0" [formControl]="resto" matInput readonly value="{{ venta.deuda }}" />
+                <input type="hidden" *ngIf="resto.value > 0" [formControl]="resto" />
+                <input class="right" *ngIf="resto.value > 0" matInput readonly value="{{ resto.value |  number: '0.2-2'}}"/>
                 <input *ngIf="resto.value == 0" matInput readonly [value]="'LIQUIDADO' | translate" />
                 <span *ngIf="resto.value > 0" matPrefix>$&nbsp;</span>
             </mat-form-field>
@@ -24,6 +25,9 @@
             </div>
             <div class="center">
                 <section class="button">
+                    <button mat-button (click)="liquidar()" [matTooltip]="'PAGAR' | translate" class="buton_actions" color="primary">
+                        Liquidar
+                    </button>
                     <button mat-button (click)="pagar()" [matTooltip]="'PAGAR' | translate" class="buton_actions" color="primary">
                         Pagar
                     </button>
