--- a/src/app/components/reporte-carga/detalles-reporte-carga/detalles-reporte-carga.component.html
+++ b/src/app/components/reporte-carga/detalles-reporte-carga/detalles-reporte-carga.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="title"><span class="nobold"></span> {{fecha.toDate() | date: 'short' }}</div>
+    <div class="title"><span class="nobold"></span> {{fecha.toDate() | date: 'dd/MM/yyyy hh:mm aa'  }}</div>
     <mat-dialog-content>
         <table>
             <tr>
