--- a/src/app/components/reporte/filtros/filtros.component.html
+++ b/src/app/components/reporte/filtros/filtros.component.html
@@ -36,6 +36,7 @@
             <mat-option value="2">{{ 'EFECTIVO' | translate }}</mat-option>
             <mat-option value="3">{{ 'TRANSFERENCIA' | translate }}</mat-option>
             <mat-option value="4">{{ 'PAGO_PENDIENTE' | translate }}</mat-option>
+            <mat-option value="5">{{ 'NO_ENTREGADA' | translate }}</mat-option>
         </mat-select>
         <mat-hint>{{ 'BUSQUEDA_ESP_HINT' | translate}}</mat-hint>
     </mat-form-field>
