--- a/src/app/commons/nav/nav.component.scss
+++ b/src/app/commons/nav/nav.component.scss
@@ -19,10 +19,46 @@
 .example-spacer {
   flex: 1 1 auto;
   text-align: center;
+  padding-left: 150px;
 }
 
 .username {
   font-size: 13px;
   font-weight: bold;
   letter-spacing: 1px;
+}
+
+.image {
+  overflow: hidden;
+  margin-right: 40px;
+  margin-left: 7px;
+}
+
+img {
+  width: 35px;
+  height: 35px;
+  top: 15px;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.error {
+  background-color: #e62929;
+  color: white;
+  text-align: center;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+  .example-spacer {
+    padding-left: 0px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+
+  .example-spacer {
+    padding-left: 0px;
+  }
 }
