--- a/src/app/components/impresion/impresion.component.html
+++ b/src/app/components/impresion/impresion.component.html
@@ -2,7 +2,7 @@
     <div class="titulo">
         <div class="center" *ngIf="empresa.head">
             <div class="encabezado" *ngIf="empresa.head.length <= 56">{{empresa.head}}</div>
-            <div class="encabezado" *ngIf="empresa.head.length > 56">{{empresa.head.substring(0,56) }}<br>{{empresa.head.substring(56) }}<</div>
+            <div class="encabezado" *ngIf="empresa.head.length > 56">{{empresa.head.substring(0,56) }}<br>{{empresa.head.substring(56) }}</div>
         </div>
         <h1>{{empresa.razon_social | uppercase}}</h1>
     </div>
@@ -12,14 +12,15 @@
         <span *ngIf="empresa.correo" ><br> {{empresa.correo}}</span>
         <span *ngIf="empresa.telefono"><br> Tel. {{empresa.telefono}}</span>
     </div>
-    <img width="100px" height="100px" [src]="empresa.urlImage" alt="lOGO DE LA EMPRESA">
+    <img width="125px" height="125px" [src]="empresa.urlImage" alt="lOGO DE LA EMPRESA">
     <div class="folio">
         FOLIO: <span class="bold">{{venta.numero}}</span>
     </div>
     <div class="datos">
-        <div><span class="bold">Fecha y hora:</span> {{fecha | date: 'short' }} </div>
+        <div><span class="bold">Fecha y hora:</span> {{fecha | date: 'dd/MM/yyyy hh:mm aa' }} </div>
         <div *ngIf="venta.nombre_cliente"><span class="bold">Cliente:</span> {{venta.nombre_cliente | uppercase}} </div>
-        <div *ngIf="cliente.correo"><span class="bold">Correo:</span> {{cliente.correo}}</div>
+        <div><span *ngIf="cliente.direccion"><span class="bold">Dirección:</span> {{cliente.direccion}}</span>
+        <span *ngIf="cliente.telefono"><span class="bold">&nbsp;&nbsp;&nbsp;Teléfono:</span> {{cliente.telefono}}</span></div>
     </div>
 
     <table>
@@ -34,7 +35,8 @@
             <td class="textrigth">{{prod.subtotal | currency}}</td>
         </tr>
         <tfoot>
-            <td></td>
+            <td class="textrigth" *ngIf="venta.formaPago">Pago: {{ venta.formaPago | formaPago }} <span *ngIf="venta.formaPago == 3 && venta.pagoInicial">(Abono {{venta.pagoInicial | currency}})</span> | Mercancia: {{ venta.entrega | entrega }}</td>
+            <td class="textrigth" *ngIf="!venta.formaPago">Precios sujetos a cambios.</td>
             <td class="textrigth total">Total</td>
             <td class="textrigth total">{{venta.total | currency}}</td>
         </tfoot>
@@ -58,7 +60,7 @@
         FOLIO: <span>{{venta.numero}}</span>
     </div>
     <div>
-        <div><span>Fecha y hora:</span> {{fecha | date: 'short' }} </div>
+        <div><span>Fecha y hora:</span> {{fecha | date: 'dd/MM/yyyy hh:mm aa'  }} </div>
         <div *ngIf="venta.nombre_cliente"><span>Cliente:</span> {{cliente.nombre}} </div>
         <div *ngIf="cliente.correo"><span>Correo:</span> {{cliente.correo}}</div>
     </div>
