--- a/src/app/components/pedido/pedido.component.html
+++ b/src/app/components/pedido/pedido.component.html
@@ -12,7 +12,7 @@
     <ng-container matColumnDef="fecha">
       <th mat-sort-header mat-header-cell *matHeaderCellDef>{{ 'FECHA' | translate }}</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fecha.toDate() | date: 'short' }}
+        {{ element.fecha.toDate() | date: 'dd/MM/yyyy hh:mm aa'  }}
       </td>
     </ng-container>
     <!-- Symbol Column -->
