--- a/src/app/components/reporte-carga/tabla-reporte-carga/tabla-reporte-carga.component.html
+++ b/src/app/components/reporte-carga/tabla-reporte-carga/tabla-reporte-carga.component.html
@@ -1,6 +1,6 @@
 <app-filtros-reporte-carga (getCargas)="handleVentaToList($event)"></app-filtros-reporte-carga>
 
-<table *ngIf="dataSource.data.length > 0" (matSortChange)="sortDataMetod($event)" matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table (matSortChange)="sortDataMetod($event)" matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="editar">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
@@ -14,11 +14,7 @@
     <ng-container matColumnDef="fecha">
       <th mat-sort-header mat-header-cell *matHeaderCellDef>{{ 'FECHA' | translate }}</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fecha.toDate() | date: 'short' }}
-        <span *ngIf="element.fecha_cancelacion">
-          <br>{{ 'FECHA_CANCEL' | translate }} 
-          {{ element.fecha_cancelacion.toDate() | date: 'short' }}
-        </span>
+        {{ element.fecha.toDate() | date: 'dd/MM/yyyy hh:mm aa' }}
       </td>
     </ng-container>
 
@@ -38,3 +34,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
