--- a/src/app/components/reporte/tabla/tabla.component.html
+++ b/src/app/components/reporte/tabla/tabla.component.html
@@ -1,9 +1,9 @@
 <app-filtros (getVentas)="handleVentaToList($event)"></app-filtros>
 
-<table *ngIf="dataSource.data.length > 0" (matSortChange)="sortDataMetod($event)" matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table (matSortChange)="sortDataMetod($event)" matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="editar">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
+      <th mat-header-cell *matHeaderCellDef>Número</th>
+      <td mat-cell *matCellDef="let element">{{ element.numero }}
         <button (click)="openDialog(element)" mat-icon-button aria-label="Botón detalles">
            <mat-icon>expand_more</mat-icon>
         </button>
@@ -14,10 +14,10 @@
     <ng-container matColumnDef="fecha">
       <th mat-sort-header mat-header-cell *matHeaderCellDef>{{ 'FECHA' | translate }} ({{dataSource.data.length}} ventas) </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.fecha.toDate() | date: 'short' }}
+        {{ element.fecha.toDate() | date: 'dd/MM/yyyy hh:mm aa' }}
         <span *ngIf="element.fecha_cancelacion">
           <br>{{ 'FECHA_CANCEL' | translate }} 
-          {{ element.fecha_cancelacion.toDate() | date: 'short' }}
+          {{ element.fecha_cancelacion.toDate() | date: 'dd/MM/yyyy' }}
         </span>
       </td>
     </ng-container>
@@ -31,8 +31,10 @@
   
     <!-- Weight Column -->
     <ng-container matColumnDef="nombre_usuario">
-      <th mat-sort-header mat-header-cell class="cell_hidde" *matHeaderCellDef>{{ 'USUARIO' | translate }}</th>
-      <td mat-cell class="cell_hidde" *matCellDef="let element">{{ element.nombre_usuario }}</td>
+      <th mat-sort-header mat-header-cell class="cell_hidde" *matHeaderCellDef>{{ 'ENTREGA' | translate }}</th>
+      <td mat-cell class="cell_hidde" *matCellDef="let element">{{ element.entrega | entrega }}
+        <button [matTooltip]="'ENTRAGA_OK' | translate" *ngIf="element.entrega == 2 || element.entrega == 3" mat-icon-button color="primary" (click)="entregar(element)" > <mat-icon>check_circle</mat-icon> </button>
+      </td>
     </ng-container>
 
     <!-- Weight Column -->
@@ -51,3 +53,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+
+  <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
