--- a/src/app/components/venta/resumen-venta/resumen-venta.component.html
+++ b/src/app/components/venta/resumen-venta/resumen-venta.component.html
@@ -24,6 +24,7 @@
       <mat-label>{{ 'DESCUENTO' | translate }}</mat-label>
       <input class="right" *ngIf="venta.tipo_descuento == 2" matInput readonly value="{{ venta.descuento }} %" />
       <input *ngIf="venta.tipo_descuento == 1" matInput readonly [value]="'PRECIO_ESPECIAL' | translate" />
+      <input *ngIf="venta.tipo_descuento == 3" matInput readonly [value]="'PRECIO_MAYOREO' | translate" />
     </mat-form-field>
 
     <mat-form-field *ngIf="venta.id_cliente || venta.nombre_cliente" class="label-venta">
