--- a/src/app/components/impresion/impresion.component.scss
+++ b/src/app/components/impresion/impresion.component.scss
@@ -51,6 +51,14 @@ img {
   color: rgb(69, 69, 71);
 }
 
+.colPrecio {
+  width: 100px;
+}
+
+.colPadCant {
+  padding-right: 50px;
+}
+
 .total {
   font-weight: bold;
 }
